--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -63,7 +63,7 @@
             <input id="utmMedium" name="utmMedium" value="" type="hidden" />
             <input id="returnUrl" name="returnUrl" value="" type="hidden" />
             <div id="hd" class="input-field active">
-              <label for="handle">Username / Handle</label>
+              <label for="handle">Create a Username / Handle</label>
               <input
                 id="handle"
                 name="handle"
@@ -93,7 +93,7 @@
               />
             </div>
             <div id="cc" class="input-field active">
-              <label for="country">Choose your country</label>
+              <label for="country">Select your country (current location)</label>
               <select id="country" name="country" class="input-text">
                 <option value='' ></option>
               </select>
@@ -110,9 +110,8 @@
                 <label>
                 <input id='user_privacy_policy' type="checkbox" value="on" class="input-text user_pripacy_policy">
                   <span>
-                    I agree to the <a href="https://www.topcoder.com/policy/privacy-policy" target="_new">Privacy Policy</a> of Topcoder.
-                    <br/>
-                    By clicking "Sign up", you agree to the <a href="https://www.topcoder.com/policy/terms-and-conditions"
+                    Yes, I understand and agree to the <a href="https://www.topcoder.com/policy/privacy-policy" target="_new">Privacy Policy</a> and 
+                    <a href="https://www.topcoder.com/policy/terms-and-conditions"
                       target="_blank" rel="noopener noreferrer">Terms</a> of Topcoder.
                   </span>
                 </label>
