--- a/web-assets/auth0/prod-tenant/universal-login.html
+++ b/web-assets/auth0/prod-tenant/universal-login.html
@@ -286,7 +286,7 @@
                     {
                         type: "hidden",
                         name: "returnUrl",
-                        value: retUrl
+                        value: "https://platform.topcoder.com/onboard?retUrl=" + retUrl
                     },
                     {
                         type: "hidden",
