--- a/web-assets/auth0/dev-tenant/universal-login.html
+++ b/web-assets/auth0/dev-tenant/universal-login.html
@@ -420,6 +420,18 @@
             }
         }();
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics_debug.js', 'ga');
+
+        ga('create', 'UA-6340959-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
