--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -12,12 +12,7 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css" />
-
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://tc-public-static-files.topcoder.com/topcoder-auth/js/jquery-3.5.1.min.js"></script>
     <script src="https://tc-public-static-files.topcoder.com/topcoder-auth/js/country.js"></script>
     <script type="text/javascript" src="signup.js"></script>
   </head>
