--- a/web-assets/auth0/dev-tenant/universal-login.html
+++ b/web-assets/auth0/dev-tenant/universal-login.html
@@ -26,6 +26,17 @@
         }
     </script>
 
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-MXXQHG8');</script>
+    <!-- End Google Tag Manager -->
+
 </head>
 
 <body>
@@ -79,9 +90,9 @@
         var language;
         var optionsObj = Array();
         var regSource = config.extraParams.regSource || null;
-        var utmSource = config.extraParams.utm_source || null;
-        var utmMedium = config.extraParams.utm_medium || null;
-        var utmCampaign = config.extraParams.utm_campaign || null;
+        var utmSource = config.extraParams.utmSource || null;
+        var utmMedium = config.extraParams.utmMedium || null;
+        var utmCampaign = config.extraParams.utmCampaign || null;
         var retUrl = config.extraParams.returnUrl || null;
         var loginMode = config.extraParams.mode || 'signIn';
 
@@ -248,17 +259,17 @@
                     },
                     {
                         type: "hidden",
-                        name: "utm_source",
+                        name: "utmSource",
                         value: utmSource
                     },
                     {
                         type: "hidden",
-                        name: "utm_medium",
+                        name: "utmMedium",
                         value: utmMedium
                     },
                     {
                         type: "hidden",
-                        name: "utm_campaign",
+                        name: "utmCampaign",
                         value: utmCampaign
                     },
                     {
@@ -420,18 +431,11 @@
             }
         }();
     </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXXQHG8" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
-        ga('create', 'UA-6340959-1', 'auto');
-        ga('send', 'pageview');
-    </script>
 </body>
 
 </html>
