correct retUrl logic for prod tenant

--- a/web-assets/auth0/prod-tenant/universal-login.html
+++ b/web-assets/auth0/prod-tenant/universal-login.html
@@ -295,7 +295,7 @@
                     {
                         type: "hidden",
                         name: "returnUrl",
-                        value: "https://platform.topcoder.com/onboard?retUrl=" + retUrl
+                        value: retUrl
                     },
                     {
                         type: "hidden",
