--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -52,10 +52,10 @@
           </div>
           <form method="GET" id="signup" action="#">
             <input id="state" name="state" value="" type="hidden" />
-            <input id="regSource" name="regSource" value="" type="hidden" />
-            <input id="utmSource" name="utmSource" value="" type="hidden" />
-            <input id="utmCampaign" name="utmCampaign" value="" type="hidden" />
-            <input id="utmMedium" name="utmMedium" value="" type="hidden" />
+            <input id="regSource" name="reg_source" value="" type="hidden" />
+            <input id="utmSource" name="utm_source" value="" type="hidden" />
+            <input id="utmCampaign" name="utm_campaign" value="" type="hidden" />
+            <input id="utmMedium" name="utm_medium" value="" type="hidden" />
             <input id="returnUrl" name="returnUrl" value="" type="hidden" />
             <div id="hd" class="input-field active">
               <label for="handle">Create a Username / Handle</label>
