--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -84,11 +84,16 @@
     </div>
     <footer class="footer">
       <div class="copyright-text">
-        <strong>&copy;</strong> 2021 Topcoder. All Rights Reserved
       </div>
       <a class="privacy-policy" href="https://www.topcoder.com/privacy-policy/">Privacy Policy</a>
     </footer>
   </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", function(){
+      var copyRightText = document.getElementsByClassName("copyright-text");
+      copyRightText[0].innerHTML = "<strong>&copy;</strong> " + new Date().getFullYear() + " Topcoder. All Rights Reserved"
+    });
+  </script>
 </body>
 
 </html>
