--- a/web-assets/static-pages/index.html
+++ b/web-assets/static-pages/index.html
@@ -42,7 +42,6 @@
       </div>
       <footer class="footer">
         <div class="copyright-text">
-          <strong>&copy;</strong> 2021 Topcoder. All Rights Reserved
         </div>
         <a
           class="privacy-policy"
@@ -58,5 +57,11 @@
     !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
     }}();
   </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function(){
+        var copyRightText = document.getElementsByClassName("copyright-text");
+        copyRightText[0].innerHTML = "<strong>&copy;</strong> " + new Date().getFullYear() + " Topcoder. All Rights Reserved"
+      });
+    </script>
   </body>
 </html>
