--- a/web-assets/static-pages/otp.html
+++ b/web-assets/static-pages/otp.html
@@ -51,6 +51,9 @@
             </button>
           </div>
         </form>
+        <div id="resend" style="text-align:left;">
+          <a>resend code</a>
+        </div>
       </main>
     </div>
     <footer class="footer">
