update resend otp function

--- a/web-assets/static-pages/otp.html
+++ b/web-assets/static-pages/otp.html
@@ -37,6 +37,12 @@
               <span class="clip-me">Close</span>
             </span>
           </div>
+          <div role="alert" class="message notify">
+            <div id="notify" class="message-content"></div>
+            <span class="close-error" tabindex="0">
+              <span class="clip-me">Close</span>
+            </span>
+          </div>
         </div>
         <form method="GET" id="verifyOtp" action="#">
           <input id="state" name="state" value="" type="hidden" />
