--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -11,36 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@500&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./styles.css" />
-  <script>
-    var qs = (function (a) {
-      if (a == "") return {};
-      var b = {};
-      for (var i = 0; i < a.length; ++i) {
-        var p = a[i].split("=", 2);
-        if (p.length == 1) b[p[0]] = "";
-        else b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
-      }
-      return b;
-    })(window.location.search.substr(1).split("&"));
-    window.addEventListener("load", () => {
-      var state = qs['state'];
-      if (state) {
-        document.querySelector("#resend").addEventListener("click", e => {
-          e.preventDefault();
-          window.location = 'https://auth.{{DOMAIN}}/continue?state=' + state + '&resend=1';
-        });
-      } else {
-        document.querySelector("#resend-text").style.display = "none";
-      }
-    });
-  </script>
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-MXXQHG8');</script>
-  <!-- End Google Tag Manager -->
+  <script src="https://tc-public-static-files.topcoder.com/topcoder-auth/js/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="check_email.js"></script>
 </head>
 
 <body class="center-align-card checkemail-card">
@@ -61,6 +33,33 @@
         <h2 id="page-subtitle-heading" class="page-subtitle-heading">
           Welcome to the Topcoder Community!
         </h2>
+        <div class="messages">
+          <div role="alert" class="message error">
+            <div id="error" class="message-content"></div>
+            <span class="close-error" tabindex="0">
+              <span class="clip-me">Close</span>
+            </span>
+          </div>
+          <div role="alert" class="message notify">
+            <div id="notify" class="message-content"></div>
+            <span class="close-error" tabindex="0">
+              <span class="clip-me">Close</span>
+            </span>
+          </div>
+        </div>
+        <form method="GET" id="verifyOtp" action="#">
+          <input id="state" name="state" value="" type="hidden" />
+          <input id="returnUrl" name="returnUrl" value="" type="hidden" />
+          <div id="otpdiv" class="input-field active">
+            <label for="otp">One Time Password</label>
+            <input id="otp" name="otp" size="6" class="input-text" autocomplete="off" />
+          </div>
+          <div id="sb" class="action-wrapper">
+            <button type="submit" id="continueBtn" class="continue-btn" disabled="disabled">
+              Continue
+            </button>
+          </div>
+        </form>
         <div class="page-description">
           <ul>
             <li><span>Don't see an email? Try spam just in case.
@@ -89,7 +88,7 @@
     </footer>
   </div>
   <script>
-    document.addEventListener("DOMContentLoaded", function(){
+    document.addEventListener("DOMContentLoaded", function () {
       var copyRightText = document.getElementsByClassName("copyright-text");
       copyRightText[0].innerHTML = "<strong>&copy;</strong> " + new Date().getFullYear() + " Topcoder. All Rights Reserved"
     });
